# DaFlowPINN

./: .gitignore  LICENSE  README.md  THIRD_PARTY_LICENSES.md  pyproject.toml
.github/workflows/: sphinx.yml
docs/: .buildinfo  genindex.html  home.html  index.html  objects.inv  py-modindex.html  requirements.txt  search.html  searchindex.js
docs/.doctrees/: environment.pickle  home.doctree  index.doctree
docs/_sources/: home.rst.txt  index.rst.txt
docs/api/: DaFlowPINN.post.rst  DaFlowPINN.rst  DaFlowPINN.training.optim.rst  DaFlowPINN.training.rst  modules.rst
docs/source/: conf.py
examples/: basic_config.yaml  basic_example.py  basic_expample.py  config_example.py  config_example.yaml  hbc_config.yaml  rff_config.yaml
master_thesis_code/FinalDatasets/: DA_CASE01_t_23_25_p001.npz  DA_CASE01_t_23_25_p010.npz  HC_t_14.6_14.8_p001.npz  HC_t_14.6_14.8_p010.npz
master_thesis_code/Gaussian_Window_Interpolation/: GWI_binning.py  GWI_error.py
master_thesis_code/ModelSetup_and_Submission/: DA_CASE01.py  DA_CASE01.sbatch  DA_CASE01.yaml  PINN.sbatch  config.yaml  main.py  post_only.py  submit_DA_Case.sh  submit_Halfcylinder.sh
master_thesis_code/NVIDIA_modulus_tests/: CustomGeo.py  InstallModulus.sbatch  RunPINN.sbatch  modulusPINN.py
master_thesis_code/ParticleTrackGeneration/: TrackGeneration_3D.py
master_thesis_code/ParticleVelocityComputation/: compute_velocities.py
master_thesis_code/srgan_enhancer/: DataGeneration.py  compute_tke.py  main.py  upsample_field.py
master_thesis_code/utils/: binning.py  export_unstructured_vtu.py
(+28 files in other folders)
